--- a/kinh-nghiem/linh-tinh/lau-nha.html
+++ b/kinh-nghiem/linh-tinh/lau-nha.html
@@ -302,19 +302,21 @@ data-ad-slot="5275186684">
   <div overflow=""></div>
 </amp-ad>
 
-<h3>Cây-lau-nhà công-nghiệp</h3>
-<div class="flright"><amp-img alt="cây-lau-nhà công-nghiệp" src="/images/cay-lau-chu-nhat.webp" width="400" height="400" layout="responsive"></amp-img></div>
-<p>Ở các nơi công-cộng thì thường gặp cây-lau-nhà kiểu khác, được gọi là cây-lau-nhà công-nghiệp.
+<h3>Cây-lau-nhà chữ-nhật</h3>
+<div class="flright"><amp-img alt="cây-lau-nhà chữ-nhật" src="/images/cay-lau-chu-nhat.webp" width="400" height="400" layout="responsive"></amp-img></div>
+<p>Ở các nơi công-cộng thì thường gặp cây-lau-nhà kiểu khác, được gọi là cây-lau-nhà công-nghiệp, hoặc cây-lau-nhà chữ-nhật.
 <br>Kiểu này gắn miếng giẻ-lau hình-chữ-nhật, hai đầu giẻ-lau có thêm một lớp vải thứ hai tạo thành hai cái túi sâu khoảng tám phân. Mặt giẻ-lau có nhiều sợi vải ngắn trông giống đám san-hô nên kiểu dụng-cụ lau-nhà này còn được gọi là cây-lau-nhà san-hô. Cán cây-lau-nhà kiểu này gắn vào một miếng thép hình-chữ-nhật bằng hai khớp-bản-lề để nghiêng được đủ mọi hướng. Một miếng thép hình-chữ-nhật thứ hai nhỏ hơn gắn với miếng thép thứ nhất theo kiểu bản-lề.
-<br>Việc gắn và tháo giẻ-lau ở cây-lau-nhà này rất dễ. Để gắn giẻ-lau, trải miếng giẻ-lau xuống đất, cầm cây-lau-nhà sao cho hai miếng thép gập một góc vừa đủ cho đầu mỗi miếng thép chui vào miệng túi ở một đầu của giẻ-lau, ấn cán cây-lau-nhà xuống thì hai miếng thép sẽ vào khớp thẳng hàng với nhau, không tự gập góc được và giữ giẻ-lau chắc chắn. Để tháo giẻ-lau thì dùng chân đạp lên đầu giẻ-lau bên miếng thép nhỏ, kéo cán cây-lau-nhà lên thì hai miếng thép sẽ gập góc với nhau và rút ra khỏi hai cái túi của giẻ-lau.
-<br>Việc gắn và tháo giẻ-lau nhanh chóng là ưu-điểm để dùng cây-lau-nhà kiểu này ở nơi công cộng. Nhân-viên vệ-sinh đem theo nhiều miếng giẻ-lau đủ để lau sạch một diện-tích lớn, các miếng giẻ-lau đã thấm nước và vắt vừa đủ để sẵn-sàng lau, nhân-viên vệ-sinh lần lượt dùng từng miếng giẻ-lau để lau hết diện-tích sàn, sau đó đem tất-cả những giẻ-lau dơ đi giặt chung một lượt.
-<br>Có thể thấy ưu-điểm của cây-lau-nhà công-nghiệp là mọi phần của sàn-nhà đều sạch như nhau vì đều được lau bằng những miếng giẻ-lau đã được giặt cùng một lượt. Những nơi công-cộng, dùng nhiều giẻ-lau thì có thể giặt giẻ-lau bằng máy-giặt để đỡ tốn sức người. Trong nhà ở gia-đình, chỉ cần khoảng năm tới mười miếng giẻ-lau để lau cả nhà thì có thể giặt bằng tay nếu không muốn dùng máy-giặt.</p>
+<br>Việc gắn và tháo giẻ-lau ở cây-lau-nhà này rất dễ. Để gắn giẻ-lau, trải miếng giẻ-lau xuống đất, cầm cây-lau-nhà sao cho hai miếng thép gập một góc vừa đủ cho đầu mỗi miếng thép chui vào miệng túi ở một đầu của giẻ-lau, ấn cán cây-lau-nhà xuống thì hai miếng thép sẽ vào khớp thẳng hàng với nhau, không tự gập góc được và giữ giẻ-lau chắc chắn. Để tháo giẻ-lau thì dùng chân đạp lên đầu giẻ-lau bên miếng thép nhỏ, kéo cán cây-lau-nhà lên thì hai miếng thép sẽ gập góc với nhau và rút ra khỏi hai cái túi của giẻ-lau. Một kiểu gắn giẻ-lau khác là dùng hai lớp velcro để giẻ lau dính vào đầu cây-lau-nhà.
+<br>Việc gắn và tháo giẻ-lau nhanh chóng là ưu-điểm để dùng cây-lau-nhà kiểu này ở nơi công-cộng. Nhân-viên vệ-sinh đem theo nhiều miếng giẻ-lau đủ để lau sạch một diện-tích lớn, các miếng giẻ-lau đã thấm nước và vắt vừa đủ để sẵn-sàng lau, nhân-viên vệ-sinh lần lượt dùng từng miếng giẻ-lau để lau hết diện-tích sàn, sau đó đem tất-cả những giẻ-lau dơ đi giặt chung một lượt.
+<br>Có thể thấy ưu-điểm của cây-lau-nhà chữ-nhật là mọi phần của sàn-nhà đều sạch như nhau vì đều được lau bằng những miếng giẻ-lau đã được giặt cùng một lượt. Những nơi công-cộng, dùng nhiều giẻ-lau thì có thể giặt giẻ-lau bằng máy-giặt để đỡ tốn sức người. Trong nhà ở gia-đình, chỉ cần khoảng năm tới mười miếng giẻ-lau để lau cả nhà thì có thể giặt bằng tay nếu không muốn dùng máy-giặt.</p>
+<p>Gần-đây có một loại giẻ-lau được làm từ sợi microfiber, được giới-thiệu là <a href="dungcuvesinh.com/gioi-thieu/microfiber-la-gi-khac-biet-voi-cotton/" target='_blank'>lau sạch hơn loại giẻ-lau làm từ sợi cotton</a>.</p>
 
-<p>Để lau-nhà tôi ở sao cho mọi phần sạch đều nhau thì tôi đang dùng nhiều cây-lau-nhà kiểu ly-tâm. Nhà tôi có diện tích 126 mét vuông, tôi dùng năm cây-lau-nhà và một cái xô ly-tâm. Tiếp theo đây tôi viết chi tiết cách lau này.</p>
-
-<h2>Dùng nhiều cây-lau-nhà ly-tâm để lau-nhà sạch đều</h2>
-<h3 id="pha">Pha nước-lau-sàn</h3>
-<p>Nước-lau-sàn là một loại chất tẩy rửa với tác-dụng chính là làm cho bụi bẩn dễ rời khỏi sàn nhà, tác-dụng phụ là để lại mùi thơm một lúc sau khi lau.</p>
+<h2>Lau-nhà sao-cho sạch đều</h2>
+<p>Nhà tôi có diện tích 126 mét vuông.</p>
+<h3>Dùng nhiều cây-lau-nhà ly-tâm</h3>
+<p>Để lau-nhà tôi ở sao cho mọi phần sạch đều nhau thì tôi đang dùng nhiều cây-lau-nhà kiểu ly-tâm. Tôi dùng năm cây-lau-nhà và một cái xô ly-tâm. Tiếp theo đây tôi viết chi tiết cách lau này.</p>
+<h4 id="pha">Pha nước-lau-sàn</h4>
+<p>Nước-lau-sàn là một loại chất tẩy rửa với tác-dụng chính là làm cho bụi bẩn dễ rời khỏi sàn-nhà, tác-dụng phụ là để lại mùi thơm một lúc sau khi lau.</p>
 <p>Đọc kỹ hướng-dẫn-sử-dụng in trên các chai hay bịch nước-lau-sàn ta sẽ thấy những điều không hợp-lý. Nguyên văn một lời hướng-dẫn-sử-dụng như sau: "Hoà một nắp đầy nước-lau-sàn vào nửa xô nước (loại xô 5 lít)."
 <br>Lời hướng-dẫn trên không chính-xác vì cái xô năm lít rất nhỏ, nó sẽ là một cái xô tròn cao khoảng 19 phân và đường kính đáy khoảng 19 phân. Không thể dùng cái xô nhỏ như vậy để lau-nhà với các cây-lau-nhà, cũng rất khó dùng khi lau-nhà bằng tay và giẻ-lau. Một điều không hợp-lý nữa là nửa xô năm lít thì quá ít nước.
 <br>Không chính-xác là một lỗi rất thường gặp ở các sản-phẩm thông-dụng ở Việt-Nam. Lời hướng-dẫn-sử-dụng trên được in trên nhãn của hai hiệu nước-lau-sàn của hai công-ty khác nhau, một công-ty đa-quốc-gia và một công-ty nội-địa, đây là trường-hợp copy bài của bạn 😄.</p>
@@ -331,25 +333,35 @@ data-ad-slot="5275186684">
   <div overflow=""></div>
 </amp-ad>
 
-<h3 id="lau">Lau-nhà một lần</h3>
+<h4 id="lau">Lau-nhà một lần</h4>
 <p><b>Tại-sao tôi chỉ dùng có năm lít nước để lau-nhà?</b>
 <br>Lượng nước đó vẫn còn dư khoảng một nửa sau khi thấm ướt giẻ-lau của năm cây-lau-nhà. Với cách lau-nhà tôi sắp viết ra dưới đây thì lượng nước còn dư lại trong xô sau khi thấm ướt các giẻ-lau sẽ không có tác-dụng làm sạch sàn-nhà. Nếu tôi dùng nhiều nước-máy hơn thì tôi phải pha nhiều nước-lau-sàn hơn theo tỷ-lệ, như vậy thì phí nước-lau-sàn, nước-lau-sàn đổ xuống cống nhiều hơn sẽ tốn nhiều công hơn để xử-lý.</p>
 <p>Sau khi đã thấm ướt giẻ-lau của năm cây-lau-nhà và vắt bớt nước, tôi dùng từng cây để lau từng phòng trong nhà, phòng nhỏ thì dùng một cây lau hai phòng. Tôi chỉ lau một lần chứ không lau lại với nước khác, nhưng mỗi ô gạch được giẻ-lau đẩy qua lại vài lần trong một lần lau đó.
-<h3 id="xa">Xả sạch ba lần</h3>
+<h4 id="xa">Xả sạch ba lần</h4>
 <p>Lau hết cả nhà với năm cây-lau-nhà, tôi hứng thêm nước-máy vào cái xô ly-tâm đến vạch tối-đa của xô (thấp hơn đáy rổ ly-tâm khoảng ba phân) rồi xả từng cây-lau-nhà, cây nào lau phòng ít dơ nhất thì xả trước. Một ít nước-lau-sàn còn lại trong xô sẽ góp thêm tác-dụng tách bụi bẩn ra khỏi giẻ-lau. Xả hết năm cây-lau-nhà, tôi đổ nước dơ xuống cống và hứng nước-máy sạch để xả tiếp. Mỗi cây-lau-nhà được xả ba lần sẽ sạch như mới. Nếu giẻ-lau không được xả sạch sau khi lau, nó sẽ giữ lại bụi bẩn và nhanh chóng đổi sang màu-giẻ-lau 😄.
 <br>Tôi không cần phải nhúng tay vào nước khi xả cây-lau-nhà ly-tâm, tôi chỉ cần nắm cán của nó kéo lên và ấn xuống cho giẻ-lau bị giũ trong xô nước khoảng 30 lần, kế đó tôi cho giẻ lau vào rổ ly-tâm và ấn cán cây-lau-nhà khoảng 15 lần.</p>
 <p>Như đã viết ở trên, ưu-điểm của cách lau-nhà này là mọi chỗ trong nhà đều sạch như nhau vì đều được lau bằng một cây lau-nhà sạch. Diện-tích nhà 126 mét vuông trừ đi diện-tích gầm giường và gầm tủ thì mỗi cây-lau-nhà chỉ lau không quá 20 mét vuông. Nếu chỉ dùng một cây-lau-nhà, lau cả nhà sạch đều như nhau sẽ tốn nhiều công, nhiều nước-máy và nước-lau-sàn hơn vì sau khi lau một phần năm căn nhà, tôi phải xả cây-lau-nhà ba lần rồi pha lại nước-lau-sàn, như-vậy tốn nước-lau-sàn và nước-máy gấp năm lần.</p>
 
-<h2>Nên dùng cây-lau-nhà ly-tâm hay cây-lau-nhà công-nghiệp trong nhà ở gia-đình?</h2>
-<p>Tôi chưa dùng cây-lau-nhà công-nghiệp nên chưa có kinh-nghiệm thực tế, nhưng tôi cho rằng cây-lau-nhà công-nghiệp có những ưu-điểm sau:
+<h3>Dùng cây-lau-nhà chữ-nhật</h3>
+<p>Sau khi các cây-lau-nhà ly-tâm bị hư, tôi đổi qua dùng cây-lau-nhà chữ-nhật. Tôi dùng một cây-lau-nhà với năm miếng giẻ-lau, cả hai loại: microfiber và cotton.</p>
+<h4>Pha nước-lau-sàn</h4>
+<p>Tôi bắt-chước cách lau-nhà của cô nhân-viên trong khu nhà tôi ở: cô ta không nhúng những miếng giẻ-lau vào xô nước trước khi lau mà cô ta pha nước-lau-sàn vào một bình-xịt cỡ một lít và xịt lên từng tấm giẻ-lau trước khi lau. Các tấm giẻ-lau đã được giặt sạch và phơi khô, chỉ cần xịt khoảng 70 ml nước pha nước-lau-sàn là đủ ẩm để lau khoảng 15 mét vuông. Như-vậy tôi chỉ cần pha 25 ml nước lau-sàn với 325 ml nước để xịt năm miếng giẻ-lau. Theo cách này thì lượng nước-lau-sàn tác-dụng lên sàn-nhà sẽ nhiều hơn so với cách nhúng giẻ-lau.</p>
+<h4>Lau-nhà một lần</h4>
+<p>Lau từng phòng trong nhà với từng miếng giẻ-lau đã xịt đủ ẩm. Đẩy cây-lau-nhà chữ-nhật tốn nhiều sức hơn cây-lau-nhà ly-tâm vì diện-tích giẻ-lau lớn hơn, và càng tốn nhiều sức hơn nữa khi dùng giẻ-lau microfiber vì lực ma-sát giữa giẻ-lau và sàn-nhà lớn hơn. Khi dùng giẻ-lau microfiber thì chỉ lau khi <b>đẩy</b> cây-lau-nhà, không thể lau khi <b>kéo</b> cây-lau-nhà vì lực ma-sát kết-hợp với lực kéo sẽ làm miếng giẻ-lau bị lật mặt lên trên. Nếu miếng giẻ-lau microfiber được xịt nhiều nước hơn thì sẽ dễ lau hơn, nhưng nếu nhiều nước quá thì sẽ để lại nước trên sàn-nhà.</p>
+<p>Do sàn-nhà tôi không quá dơ, chỉ có bụi, không có dầu-mỡ hay bùn-đất nên không thấy được sự-khác-nhau giữa giẻ-lau microfiber và giẻ-lau cotton. Các bạn cũng không cần dùng giẻ-lau microfiber nếu sàn-nhà không quá dơ.</p>
+<h4>Giặt giẻ-lau</h4>
+<p>Các miếng giẻ-lau được tháo ra khỏi cây-lau-nhà, được xịt bằng vòi xịt nước mạnh để trôi bớt bụi bẩn, sau đó được cho vào chậu nước pha xà-bông, chà bằng bàn-chải và xả ba lần, giặt-xả xong rồi thì vắt ráo nước và treo chỗ thoáng cho khô.</p>
+
+<h2>Nên dùng cây-lau-nhà ly-tâm hay cây-lau-nhà chữ-nhật trong nhà ở gia-đình?</h2>
+<p>Theo tôi cây-lau-nhà chữ-nhật có những ưu-điểm sau:
 <ul>
 <li>tốn ít tiền hơn vì chỉ cần mua một cây-lau-nhà với vài miếng giẻ-lau,</li>
 <li>bền hơn vì cấu-tạo đơn-giản hơn,</li>
 <li>lau sạch hơn vì toàn-bộ diện-tích giẻ-lau đều bị đè sát vào sàn-nhà, trong khi một-phần giẻ-lau của cây-lau-nhà ly-tâm xoè ra ngoài đĩa nhựa nên không bị đè sát vào sàn-nhà,</li>
 <li>lau góc nhà dễ hơn vì giẻ-lau có hình-chữ-nhật khớp với góc nhà.</li>
 </ul>
-<p>Nhược-điểm của cây-lau-nhà công-nghiệp là phải xả và vắt giẻ-lau bằng tay. Hoặc không cảm-thấy thoải-mái khi dùng máy-giặt quần áo để giặt giẻ-lau. Có loại thùng ép để vắt giẻ-lau cho cây-lau-nhà công-nghiệp, nhưng tôi cho rằng việc ép đó không làm ráo nước bằng việc ly-tâm.</p>
-<p>Khi các cây-lau-nhà đang dùng bị hư, tôi sẽ đổi qua dùng cây-lau-nhà công-nghiệp.</p>
+<p>Nhược-điểm của cây-lau-nhà chữ-nhật là phải giặt, xả và vắt giẻ-lau bằng tay. Hoặc không cảm-thấy thoải-mái khi dùng máy-giặt quần áo để giặt giẻ-lau. Có loại thùng ép để vắt giẻ-lau cho cây-lau-nhà chữ-nhật, nhưng tôi cho rằng việc ép đó không làm ráo nước bằng việc ly-tâm và không làm sạch giẻ-lau.</p>
+
 <div class="todiscuss">
 Các bài liên quan:
 <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh-nghiệm khác</a>
