--- a/download/VNTD-KTTD/index.htm
+++ b/download/VNTD-KTTD/index.htm
@@ -6,7 +6,7 @@
 <meta charset='utf-8'>
 <meta name="description" content="Việt Nam Tự Điển do Hội Khai Trí Tiến Đức xuất bản năm 1931" />
 <meta name="keywords" content="tự điển, việt nam, khai trí tiến đức">
-<link rel="canonical" href="http://download.lhboi.name.vn/VNTD-KTTD/">
+<link rel="canonical" href="https://lehboi.github.io/download/VNTD-KTTD/">
 
 <script async custom-element="amp-analytics"
     src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
