--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -377,7 +377,8 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <h2 id="online">Khi dùng các dịch vụ online</h2>
 <dl>
 <dt>NÊN bảo vệ các tài khoản của bạn thật cẩn thận</dt>
-<dd>Các tài khoản email có thể liên quan đến các dịch vụ ngân hàng và tài chính, cần được giữ thật kỹ. NÊN dùng hai lớp bảo vệ cho các tài khoản. Cách bảo vệ được viết chi tiết trong trang web <a href="/kinh-nghiem/may-tinh/protect">Bảo-vệ tài-sản-số-hoá</a>.</dd>
+<dd>Các tài khoản email có thể liên quan đến các dịch vụ ngân hàng và tài chính, cần được giữ thật kỹ. NÊN dùng hai lớp bảo vệ cho các tài khoản. Cách bảo vệ được viết chi tiết trong trang web <a href="/kinh-nghiem/may-tinh/protect">Bảo-vệ tài-sản-số-hoá</a>.
+NÊN dùng riêng một địa-chỉ email cho các dịch-vụ ngân-hàng và tài-chính, và một địa-chỉ email khác cho những dịch-vụ web không quan-trọng. Và tạo nhiều alias cho địa-chỉ email không quan-trọng đó, mỗi alias dùng với một nhóm dịch-vụ khác nhau.</dd>
 <dt>NÊN cẩn thận khi cho người trong Internet mượn tiền</dt>
 <dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.
 <br>Một kiểu người trong Internet khác là người gửi tặng bạn một món quà rất có giá trị mà bạn cần phải chi một số tiền kha khá trước khi nhận được quà.</dd>
