--- a/download/VNTD-KTTD/index.htm
+++ b/download/VNTD-KTTD/index.htm
@@ -152,7 +152,7 @@ div.title {text-align:center;font-size:160%;font-weight:bold;color:#cc0066;font-
  </tr>
 </table>
 
-
+<p><a href="https://lehboi.github.io/sitemap"><b>Các nội-dung khác</b></a></p>
 </div>
 
 
