--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -188,6 +188,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <dl>
   <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
   <dd>Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố.</dd>
+  <dt><a href="sec-digit-life">Bảo-vệ đời-sống của bạn trong không-gian-số</a></dt>
+  <dd>Dịch từ bài viết hai phần của Sean Gallagher về những cách giữ an-toàn trong không-gian-số.</dd>
   <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
   <dd>Giữ file trong nhiều máy và nhiều Cloud Storage sao cho an toàn và không bị rối loạn.</dd>
   <dt><a href='privcloudstor'>Hướng-dẫn làm cloud storage server</a></dt>
