--- a/kinh-nghiem/may-tinh/sec-digit-life.html
+++ b/kinh-nghiem/may-tinh/sec-digit-life.html
@@ -231,6 +231,7 @@ Nội-dung:
 <li><a href="#part1">Phần một: bảo-vệ những thiết-bị di-động</a></li>
 <li><a href="#part2">Phần hai: bảo-vệ những thông-tin trong mạng</a></li>
 </ul>
+<div><amp-img alt="Rủi-ro khi nối vào Internet (hình từ Getty Images)" src="/images/risk-Internet.jpg" width="980" height="674" layout="responsive"></amp-img></a></div>
 <p>Lúc-này tôi dành phần-lớn thời-gian để xem-xét mặt tối của đời-sống trong không-gian-số—kiểm-tra những kỹ-thuật, công-cụ, và phương-pháp của những kẻ-tội-phạm máy-tính để giúp mọi-người tự-vệ tốt hơn trước bọn-chúng. So với khi tôi làm ở Ars Technica, việc này không khác nhiều, nhưng nó đã cho tôi hiểu rõ hơn những người bình-thường khó sống “an-toàn” trong không-gian-số như-thế-nào.</p>
 <p>Ngay-cả những người tự nhận là có kiến-thức về tội-phạm máy-tính và các mối đe-dọa an-ninh—và những người làm mọi cách họ biết—cũng có-thể (và thật-sự) trở-thành nạn-nhân. Sự-thật là khi có đủ thời-gian và kỹ-năng thì mọi thứ đều có thể bị hack.</p>
 <p>Mấu-chốt để bảo-vệ đời-sống trong không-gian-số của bạn là làm cho nó trở-nên hết-sức tốn-kém và không dễ-dàng đối-với những kẻ có ý-định ăn-cắp những thứ quan-trọng đối-với sự-an-toàn, tài-chính và sự-riêng-tư của bạn. Nếu kẻ-trộm thấy rằng khó hoặc tốn-kém để lấy được đồ của bạn thì chúng sẽ chuyển sang một mục-tiêu dễ hơn. Vì vậy, quan-trọng là phải đánh-giá những cách mà thông-tin bị trộm hoặc bị lộ—và hiểu những giới-hạn trong việc bảo-vệ những thông-tin đó.</p>
