--- a/sitemap.html
+++ b/sitemap.html
@@ -198,7 +198,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
 
       <a href='/kinh-nghiem/may-tinh/protect'>Bảo-vệ tài-sản-số-hoá</a><br>
-      <a href="sec-digit-life">Bảo-vệ đời-sống của bạn trong không-gian-số</a><br>
+      <a href="/kinh-nghiem/may-tinh/sec-digit-life">Bảo-vệ đời-sống của bạn trong không-gian-số</a><br>
       <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
       <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
       <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-điện-tử Pi</a><br>
